# admin-api

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Pipfile  README.md  config.yaml  configure.ac  main.py
alembic/: env.py
alembic/versions/: 344144652f30_v0_10_6_add_domain_endday_server_default.py  88abfa98c388_v0_10_alembic_init.py  8b47ca3b178f_v0_12_0_user_alias_restructure.py
api/: __init__.py  config.py  core.py  errors.py  security.py
cli/: __init__.py  chat.py  common.py  config.py  dbconf.py  dbtools.py  domain.py  exmdb.py  fetchmail.py  fs.py  ldap.py  mconf.py  misc.py  mlist.py  org.py  remote.py  server.py  services.py  user.py
conf.d/: README.md
data/: api-config.ini  api.conf  autocomplete.sh  config.yaml  config.yaml.in  grommunio-admin-api.service  grommunio-admin-api.socket  grommunio-sudo  gzip.cmake  pkit-10-gromox.rules  polkit-10-grommunio.rules  tmpfiles-grommunio-admin-api.conf  yaml2json.py
doc/: Makefile  changelog.rst  install.rst
doc/man/: grommunio-admin-config.1  grommunio-admin-connect.1  grommunio-admin-dbconf.1  grommunio-admin-domain.1  grommunio-admin-exmdb.1  grommunio-admin-fetchmail.1  grommunio-admin-fs.1  grommunio-admin-ldap.1  grommunio-admin-mconf.1  grommunio-admin-mlist.1  grommunio-admin-org.1  grommunio-admin-passwd.1  grommunio-admin-run.1  grommunio-admin-server.1  grommunio-admin-service.1  grommunio-admin-shell.1  grommunio-admin-taginfo.1  grommunio-admin-user.1  grommunio-admin-version.1  grommunio-admin.1  grommunio-dbconf.1
doc/rst/: grommunio-admin-config.rst  grommunio-admin-connect.rst  grommunio-admin-dbconf.rst  grommunio-admin-domain.rst  grommunio-admin-exmdb.rst  grommunio-admin-fetchmail.rst  grommunio-admin-fs.rst  grommunio-admin-ldap.rst  grommunio-admin-mconf.rst  grommunio-admin-mlist.rst  grommunio-admin-org.rst  grommunio-admin-passwd.rst  grommunio-admin-run.rst  grommunio-admin-server.rst  grommunio-admin-service.rst  grommunio-admin-shell.rst  grommunio-admin-taginfo.rst  grommunio-admin-user.rst  grommunio-admin-version.rst  grommunio-admin.rst  grommunio-dbconf.rst
endpoints/: __init__.py  defaults.py  ext.py  misc.py  orgs.py  roles.py  service.py  tasq.py  users.py
endpoints/domain/: __init__.py  classes.py  folders.py  ldap.py  misc.py  mlists.py  users.py
endpoints/system/: __init__.py  arealist.py  dbconf.py  domains.py  exmdb.py  logs.py  mailqueue.py  mconf.py  misc.py  roles.py
exmdb/: common.py  domain.py  user.py
exmdbpp/: .gitignore  Doxyfile  Makefile  Makefile.am  pyexmdb.i
exmdbpp/include/: ExmdbClient.h  IOBuffer.h  IOBufferImpl.h  IOBufferOps.h  constants.h  queries.h  requests.h  structures.h  util.h
exmdbpp/src/: ExmdbClient.cpp  queries.cpp  requests.cpp  structures.cpp  util.cpp
grammm-dbconf/: .gitignore  Makefile  grammm-dbconf.cpp
grodbconf/: .gitignore  Makefile  grammm-dbconf.cpp
grommunio-dbconf/: .gitignore  Makefile  Makefile.am  grommunio-dbconf.cpp
orm/: DataModel.py  __init__.py  classes.py  common.py  domains.py  ext.py  misc.py  mlists.py  orgs.py  roles.py  users.py
res/: autocomplete.sh  config.yaml  domain.sqlite3  ldapTemplates.yaml  midb.sqlite3  openapi.yaml  storelangs.json  user.sqlite3
services/: __init__.py  chat.py  exmdb.py  ldap.py  redis.py  systemd.py
tools/: DataModel.py  chat.py  classfilters.py  config.py  constants.py  dbconf.py  deviceutils.py  dnsHealth.py  exmdb.py  formats.py  ldap.py  license.py  logs.py  mconf.py  misc.py  permissions.py  queries.py  rop.py  storage.py  structures.py  systemd.py  systemd2.py  tasq.py
tools/exmdb/: common.py  domain.py  midb.py  user.py
tools/mapi/: client.py  constants.py  exc.py  requests.py  structures.py
